@@ -1,4 +1,7 @@
-July 7, 2002: Alex Burger <alex@fragit_dot_net>
+Sep 30, 2002: Alex Burger <alex@fragit_dot_net>
+- Added busy server redial.  Server - Cancel Redial to stop
+
+Sep 29, 2002: Alex Burger <alex@fragit_dot_net>
 - Added Soldier of Fortune 2 support and master
 
 Sep 27, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
